--- a/DASHBOARD/package.json
+++ b/DASHBOARD/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-spinners": "^0.17.0"
+    "react-spinners": "^0.17.0",
+    "recharts": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
