--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "multer": "^2.0.1",
-    "papaparse": "^5.5.3"
+    "papaparse": "^5.5.3",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
